--- a/Day1/index.html
+++ b/Day1/index.html
@@ -10,5 +10,53 @@
 <body>
     <h1>Priyana Agrawal</h1>
     <h2>CSE-DS-A</h2>
+    <form action="#" method="post">
+        <table>
+            <tr>
+                <td colspan="2">
+                    <h1>Registration Form</h1>
+                </td>
+            </tr>
+            <tr>
+                <td>Name</td>
+                <td><input type="text" name="t1" id="" required></td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td><input type="text" name="t2" id="" required></td>
+            </tr>
+            <tr>
+                <td>Address</td>
+                <td><textarea rows="3" cols="30" name="" id=""></textarea></td>
+            </tr>
+            <tr>
+                <td>Branch</td>
+                <td>CSE<input type="radio" name="r1" id="">
+                CSE-DS<input type="radio" name="r1" id="">
+                CSE-AIML<input type="radio" name="r1" id="">
+                IT<input type="radio" name="r1" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>Languages</td>
+                <td>
+                    C<input type="checkbox" name="c1" value="C" id="">
+                    C++<input type="checkbox" name="c2" value="CPP" id="">
+                    JAVA<input type="checkbox" name="c3" value="Java" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>Date of Birth</td>
+                <td><input type="date" name="dob" id=""></td>
+            </tr>
+            <tr>
+                <td>Upload Profile</td>
+                <td><input type="file" name="f" id=""></td>
+            </tr>
+            <td><input type="submit" value="Register"></td>
+            <td><input type="reset" value="Clear"></td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
