--- a/Day1/index.html
+++ b/Day1/index.html
@@ -11,7 +11,7 @@
     <h1>Priyana Agrawal</h1>
     <h2>CSE-DS-A</h2>
     <form action="#" method="post">
-        <table>
+        <table border="2px">
             <tr>
                 <td colspan="2">
                     <h1>Registration Form</h1>
