--- a/Day2/index.html
+++ b/Day2/index.html
@@ -8,15 +8,28 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body{
-            background-color: cyan;
+            background-color: rgb(189, 248, 248);
         }
         p{
-            background-color: aquamarine;
+            background-color: rgb(175, 134, 209);
         }
     </style>
 </head>
 <p style="background-color: azure;">Hello</p>
-<body>
-    
+<body>   
+    <div>
+        <p>
+            This is inside div
+        </p>
+    </div>
+    <div><h1>
+        <p>
+            This is inside div
+        </p></h1>
+    </div>
+    <p>This is outside div</p>
+    <p>This is outside div</p>
+    <p>This is outside div</p>
+    <p>This is outside div</p> 
 </body>
 </html>
