--- a/Day2/index1.html
+++ b/Day2/index1.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="fcontainer">
-        <div class="fitems">1</div>
-        <div class="fitems">2</div>
+        <div class="fitems item1">1</div>
+        <div class="fitems item2">2</div>
         <div class="fitems">3</div>
         <div class="fitems">4</div>
     </div>
