--- a/Day2/index.html
+++ b/Day2/index.html
@@ -9,6 +9,8 @@
     <style>
         body{
             background-color: rgb(189, 248, 248);
+            /* margin: 0; */
+            /* padding: 0; */
         }
         p{
             background-color: rgb(175, 134, 209);
