--- a/Day2/Assignment/navbar.html
+++ b/Day2/Assignment/navbar.html
@@ -8,15 +8,34 @@
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <div class="dv">
+    <div class="mydv">
         <div class="header">
             <div class="logo">
-                <img src="abc" alt="">
+                <img src="images\download.jpg" alt="">
             </div>
 
-            <div class="menu"></div>
+            <div class="menu">
+                <div class="nav-item">
+                    <a href="">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="">About Us</a>
+                </div>
+                <div class="nav-item">
+                    <a href="">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="">Event</a>
+                </div>
+                <div class="nav-item">
+                    <a href="">More Links</a>
+                </div>
+            </div>
 
-            <div class="nav-right"></div>
+            <div class="nav-right">
+                <a href="" class="login">Login</a>
+                <a href="" class="signup">Sign Up</a>
+            </div>
         </div>
 
         <div class="maincontent"></div>
